working battery voltage

--- a/e-ink_code/platformio.ini
+++ b/e-ink_code/platformio.ini
@@ -12,8 +12,8 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
-upload_port = /dev/cu.usbmodem101
-monitor_port = /dev/cu.usbmodem101
+; upload_port = /dev/cu.usbmodem101
+; monitor_port = /dev/cu.usbmodem101
 lib_deps = 
     https://github.com/ZinggJM/GxEPD2.git
     bblanchon/ArduinoJson@^6.21.3
