seperated files by functionality, added flash partitioning

--- a/e-ink_code/platformio.ini
+++ b/e-ink_code/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
+board_build.partitions = partitions.csv
 ; upload_port = /dev/cu.usbmodem101
 ; monitor_port = /dev/cu.usbmodem101
 lib_deps = 
