--- a/e-ink_code/platformio.ini
+++ b/e-ink_code/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
 board_build.partitions = partitions.csv
+src_dir = firmware
 ; upload_port = /dev/cu.usbmodem101
 ; monitor_port = /dev/cu.usbmodem101
 lib_deps = 
