--- a/e-ink_code/platformio.ini
+++ b/e-ink_code/platformio.ini
@@ -8,12 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+src_dir = firmware
+
 [env:seeed_xiao_esp32c3]
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
 board_build.partitions = partitions.csv
-src_dir = firmware
+build_flags = -I firmware/core
 ; upload_port = /dev/cu.usbmodem101
 ; monitor_port = /dev/cu.usbmodem101
 lib_deps = 
@@ -21,3 +24,13 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     adafruit/Adafruit SHT31 Library@^2.2.2
     adafruit/Adafruit Unified Sensor@^1.1.9
+
+; Fun app only (smaller firmware for “fun” devices)
+[env:seeed_xiao_fun]
+extends = env:seeed_xiao_esp32c3
+build_flags = -I firmware/core -DAPP_FUN
+
+; Shelf + sensor apps (for shelf/sensor devices; no fun app)
+[env:seeed_xiao_shelf_sensor]
+extends = env:seeed_xiao_esp32c3
+build_flags = -I firmware/core -DAPP_SHELF -DAPP_SENSOR
