moved to nimBLE, BLE troubleshooting

--- a/e-ink_code/platformio.ini
+++ b/e-ink_code/platformio.ini
@@ -16,6 +16,7 @@ platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
 board_build.partitions = partitions.csv
+board_build.sdkconfig = sdkconfig.defaults
 build_flags = -I firmware/core
 ; upload_port = /dev/cu.usbmodem101
 ; monitor_port = /dev/cu.usbmodem101
@@ -24,6 +25,7 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     adafruit/Adafruit SHT31 Library@^2.2.2
     adafruit/Adafruit Unified Sensor@^1.1.9
+    h2zero/NimBLE-Arduino@^1.4.1
 
 ; Fun app only (smaller firmware for “fun” devices)
 [env:seeed_xiao_fun]
