--- a/e-ink_code/platformio.ini
+++ b/e-ink_code/platformio.ini
@@ -42,6 +42,11 @@ build_flags = -I firmware/core -DAPP_SHELF
 extends = env:seeed_xiao_esp32c3
 build_flags = -I firmware/core -DAPP_SENSOR
 
+; Messages app only (configurable list of up to 10 messages, black text only)
+[env:seeed_xiao_messages]
+extends = env:seeed_xiao_esp32c3
+build_flags = -I firmware/core -DAPP_MESSAGES
+
 ; Shelf + sensor apps (deprecated - use individual environments above)
 ; [env:seeed_xiao_shelf_sensor]
 ; extends = env:seeed_xiao_esp32c3
